# DHT_11_Project

./: .gitignore  README.md
dht11_温湿度传感器/: CMakeLists.txt  dht11_app.out  dht11_data.txt  dht11_py.py
dht11_温湿度传感器/src/: dht11_reciver.c
